# adventofcode-2025

./: .gitignore  .gitmodules  Cargo.toml  README.md  download-input.env.example  download-input.sh
.github/workflows/: build.yml  clippy.yml
benches/: bench.rs
src/: common.rs  crate_info.rs  lib.rs  main.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  mod.rs
src/search/: astar.rs  mod.rs
src/util/: iter.rs  mod.rs
tests/: test.rs
