[package]
name = "adventofcode-2025"
authors = ["Emil Lundberg <emil@emlun.se>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "Solutions to Advent of Code 2025"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
animate = ["print"]
print = []

[dependencies]
clap = "2.33.0"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "bench"
harness = false

[profile.flamegraph]
inherits = "release"
debug = true
